# python-portabletext-html

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  setup.cfg
.github/scripts/: get_python_versions.py
.github/workflows/: ci.yml  codecov.yml  publish.yml  test.yml
portabletext_html/: __init__.py  constants.py  logger.py  marker_definitions.py  renderer.py  types.py  utils.py
sanity_html/: __init__.py  constants.py  dataclasses.py  logger.py  marker_definitions.py  marker_serializers.py  renderer.py  types.py  utils.py
sanity_html/serializers/: lists.py  spans.py
src/sanity_html/: __init__.py  renderer.py
tests/: test_marker_definitions.py  test_module_loading.py  test_rendering.py  test_upstream_suite.py
tests/fixtures/: basic_mark.json  custom_serializer_node_after_list.json  invalid_node.json  invalid_type.json  multiple_adjecent_marks.json  multiple_simple_spans.json  nested_marks.json  simple_span.json  simple_xss.json
tests/fixtures/upstream/: 001-empty-block.json  002-single-span.json  003-multiple-spans.json  004-basic-mark-single-span.json  005-basic-mark-multiple-adjacent-spans.json  006-basic-mark-nested-marks.json  007-link-mark-def.json  008-plain-header-block.json  009-messy-link-text.json  010-basic-bullet-list.json  011-basic-numbered-list.json  012-image-support.json  013-materialized-image-support.json  014-nested-lists.json  015-all-basic-marks.json  016-deep-weird-lists.json  017-all-default-block-styles.json  018-marks-all-the-way-down.json  019-keyless.json  020-empty-array.json  021-list-without-level.json  022-inline-nodes.json  023-hard-breaks.json  024-inline-images.json  025-image-with-hotspot.json  026-inline-block-with-text.json  027-styled-list-items.json  050-custom-block-type.json  051-override-defaults.json  052-custom-marks.json  053-override-default-marks.json  060-list-issue.json  061-missing-mark-serializer.json
