[tool.poetry]
name = "python-sanity-html"
version = "0.1.0"
description = "HTML renderer for Sanity's Portable Text format"
authors = ["Kristian Klette <klette@otovo.com>"]
packages = [
    { include = "sanity_html", from = "src" },
]
license = "Apache2"
readme = "README.md"
homepage = "https://github.com/otovo/python-sanity-html"
repository = "https://github.com/otovo/python-sanity-html"
documentation = "https://github.com/otovo/python-sanity-html"
keywords = [
    "Sanity",
    "Portable text",
    "HTML",
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
flake8 = "^3.9.0"
flake8-black = "^0.2.1"
mypy = "^0.812"
flake8-bugbear = "^21.4.3"
flake8-isort = "^4.0.0"
flake8-pytest-style = "^1.4.1"
black = "^20.8b1"
pytest-cov = "^2.11.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
