[tool.poetry]
name = "python-sanity-html"
version = "0.1.0"
description = "HTML renderer for Sanity's Portable Text format"
homepage = "https://github.com/otovo/python-sanity-html"
repository = "https://github.com/otovo/python-sanity-html"
authors = ["Kristian Klette <klette@otovo.com>"]
maintainers = ["Sondre Lillebø Gundersen <sondrelg@live.no>"]
license = "Apache2"
readme = "README.md"
keywords = ["Sanity", "Portable text", "HTML", "Parsing"]
include = ['CHANGELOG.md']
packages = [{ include = 'sanity_html' }]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Environment :: Web Environment',
    'Operating System :: OS Independent',
    'License :: OSI Approved :: Apache Software License',
    'Topic :: Text Processing',
    'Topic :: Text Processing :: Markup',
    'Topic :: Text Processing :: Markup :: HTML',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Typing :: Typed',
]

[tool.poetry.urls]
"Changelog" = "https://github.com/otovo/python-sanity-html/blob/master/CHANGELOG.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
flake8 = "^3.9.0"
pytest-cov = "^2.11.1"
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'
skip-string-normalization = true

[tool.isort]
profile = 'black'
multi_line_output = 3
include_trailing_comma = true
line_length = 120

[tool.pytest.ini_options]
addopts = ['--cov=sanity_html','--cov-report', 'term-missing']

[tool.coverage.run]
source = ['sanity_html/*']
omit = []
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    'if TYPE_CHECKING:',
]