[tool.poetry]
name = 'sanity-html'
version = '1.0.0'
description = "HTML renderer for Sanity's Portable Text format"
homepage = 'https://github.com/otovo/python-sanity-html'
repository = 'https://github.com/otovo/python-sanity-html'
authors = ['Kristian Klette <klette@otovo.com>']
maintainers = ['Sondre Lillebø Gundersen <sondrelg@live.no>']
license = 'Apache2'
readme = 'README.md'
keywords = ['sanity', 'portable', 'text', 'html', 'parsing']
include = ['CHANGELOG.md']
packages = [{ include = 'sanity_html' }]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Environment :: Web Environment',
    'Operating System :: OS Independent',
    'License :: OSI Approved :: Apache Software License',
    'Topic :: Text Processing',
    'Topic :: Text Processing :: Markup',
    'Topic :: Text Processing :: Markup :: HTML',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Typing :: Typed',
]

[tool.poetry.dependencies]
python = '^3.7'

[tool.poetry.dev-dependencies]
pytest = '^6.2.3'
flake8 = '^3.9.0'
pytest-cov = '^2.11.1'
coverage = '^5.5'

[build-system]
requires = ['poetry-core>=1.0.0']
build-backend = 'poetry.core.masonry.api'

[tool.black]
line-length = 120
include = '\.pyi?$'
skip-string-normalization = true

[tool.isort]
profile = 'black'
multi_line_output = 3
include_trailing_comma = true
line_length = 120

[tool.pytest.ini_options]
addopts = ['--cov=sanity_html','--cov-report', 'term-missing']
markers = ['unsupported']

[tool.coverage.run]
source = ['sanity_html/*']
omit = []
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    'if TYPE_CHECKING:',
]
